<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FMD</string>
    <string name="Ok" translatable="false">@android:string/ok</string>
    <string name="loading">Loading…</string>
    <string name="help">Help</string>
    <string name="copy" translatable="false" tools:override="true">@android:string/copy</string>
    <string name="copied">Copied</string>
    <string name="paste" translatable="false">@android:string/paste</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="Edit">Edit</string>
    <string name="Enable">Enable</string>
    <string name="Delete">Delete</string>
    <string name="label">Label</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="Fused">Fused</string>
    <string name="GPS">GPS</string>
    <string name="Cell">Cell</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="back">Back</string>
    <string name="request_failed_title">Network request failed</string>
    <string name="request_failed_status_code">Status code</string>
    <string name="request_failed_response_body">Response body</string>
    <string name="request_failed_exception">Exception</string>
    <string name="bottom_nav_commands">Commands</string>
    <string name="bottom_nav_transports">Transport channels</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="Settings_Settings">Settings</string>
    <string name="Settings_FMDConfig">General</string>
    <string name="Settings_FMDServer" translatable="false">FMD Server</string>
    <string name="Settings_Access_Control">Access control</string>
    <string name="Settings_OpenCellId" translatable="false">OpenCelliD</string>
    <string name="Settings_Appearance">Appearance</string>
    <string name="Settings_Import">Import settings</string>
    <string name="Settings_Export">Export settings</string>
    <string name="Settings_Logs">Logs</string>
    <string name="Settings_Debugging">Troubleshooting</string>
    <string name="Settings_About">About</string>
    <string name="Settings_FMDCommand_Description">The command used to communicate with the FMD.</string>
    <string name="Toast_Empty_FMDCommand">Empty command not allowed, using default.</string>
    <string name="Settings_Ringer_Tone_Description">Select a ringtone for the \"ring\" command.</string>
    <string name="Settings_Select_Ringtone">Select ringtone</string>
    <string name="Settings_no_ringtone_picker">No ringtone picker found!</string>
    <string name="Settings_Lockscreenmessage_Description">Lock screen message:\nWhen locking the device, this message will appear on the lock screen.</string>
    <string name="delete_pw_warning_no_backup">Warning: The password is not included in the app backup.</string>
    <string name="delete_pw_warning_empty">Warning: Deleting won\'t work because the delete password is empty. You must both enable the feature and set a password.</string>
    <string name="Settings_FMD_Server_General">General</string>
    <string name="Settings_FMD_Server_Server_URL">Server URL:</string>
    <string name="Settings_FMD_Server_User_ID">Username:</string>
    <string name="Settings_FMD_Server_Connection_Status">Connection status:</string>
    <string name="Settings_FMD_Server_Connection_Status_Success">Success</string>
    <string name="Settings_FMDServer_Change_Password_Button">Change password</string>
    <string name="Settings_FMDServer_Logout_Button">Log out</string>
    <string name="Settings_FMDServer_Logout_Text">Do you really want to log out from your FMD Server account?</string>
    <string name="Settings_FMDServer_Delete_Account">Delete account</string>
    <string name="Settings_FMDServer_Alert_DeleteData_Desc">This will delete all data from the server! Are you sure?</string>
    <string name="Settings_FMDServer_Unregister_Success">Unregistering and data deletion successful!</string>
    <string name="Settings_FMDServer_Push_Title" translatable="false">Push</string>
    <string name="Settings_FMDServer_Push_Description">Sending commands from FMD Server to your device requires a UnifiedPush distributor app.</string>
    <string name="Settings_FMDServer_Push_Distributor">Distributor: %s</string>
    <string name="Settings_FMDServer_Push_Url">Push URL: %s</string>
    <string name="Settings_FMDServer_Push_Open_Help">More information about push</string>
    <string name="Settings_FMDServer_Push_Register">Register</string>
    <string name="Settings_FMDServer_Push_Register_Again">Register again</string>
    <string name="Settings_FMDServer_Push_Install_Sunup">Install Sunup</string>
    <string name="Settings_FMDServer_Push_Info_Sunup">The recommended UnifiedPush distributor app is Sunup. Sunup is easy set up and uses push servers from Mozilla.</string>
    <string name="Settings_FMDServer_Check_Interval_Title">Connectivity check interval</string>
    <string name="Settings_FMDServer_Check_Interval_Description">FMD checks the connectivity to FMD Server every X hours. Set this to 0 to disable the connectivity check.</string>
    <string name="Settings_FMDServer_Check_Notify_After_Title">Maximum allowed time without connectivity</string>
    <string name="Settings_FMDServer_Check_Notify_After_Description">FMD will notify you if the last successful connection to FMD Server is more than X hours ago. This has no effect if the connectivity check is disabled.</string>
    <string name="Settings_FMDServer_Update_Interval_Title">Background location upload interval</string>
    <string name="Settings_FMDServer_Update_Interval_Description">FMD uploads the device\'s location every X minutes.</string>
    <string name="Settings_FMDServer_Update_Interval_Description_Constraint">Values below 15 minutes are not recommended.</string>
    <string name="Settings_FMDServer_Location_Type_Title">Location source</string>
    <string name="Settings_FMDServer_Location_Type_Description">The source(s) from which the location data is uploaded at regular intervals in the background.\nIf none is selected, no locations are uploaded regularly. (You can still use the web interface to force an upload. This requires push.)</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Title">Upload on low battery</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Description">Upload the location of this device when the battery level goes low.</string>
    <string name="password_set">Set password</string>
    <string name="password_change">Change password</string>
    <string name="password_enter">Enter password</string>
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="password_min_length">The password must be at least 8 characters. 16 or more are recommended.</string>
    <string name="password_match_command_keyword">The password must not equal one of the commands!</string>
    <string name="pw_change_success">Password changed</string>
    <string name="pw_change_empty">Password must not be empty.</string>
    <string name="pw_change_wrong_password">Wrong password</string>
    <string name="pw_change_network_failed">Password change failed due to a network error.</string>
    <string name="server_login_attempts_title">Failed login attempts to FMD Server</string>
    <string name="server_login_attempts_text">Someone tried to log in to your FMD Server account \"%s\". Due to multiple failed passwords, the account is now locked for 10 minutes.</string>
    <string name="server_version_upgrade_required_title">FMD Server upgrade required</string>
    <string name="server_version_upgrade_required_text">The FMD Server you are using has version {CURRENT}, but this app requires at least {MIN}. Controlling your device via FMD Server may not work anymore. Please upgrade your server.</string>
    <string name="server_connectivity_lost_title">FMD Server connectivity lost</string>
    <string name="server_connectivity_lost_text">The FMD Server at %1$s can no longer be reached. The last successful connection was at %2$s.</string>
    <string name="server_connectivity_check_not_enabled_title">Enable the server connectivity check</string>
    <string name="server_connectivity_check_not_enabled_text">FMD can regularly check whether FMD Server is still reachable. For privacy reasons this is off by default. But for availability reasons we recommend enabling it.</string>
    <string name="server_apparently_deleted_text">FMD cannot log in to your FMD Server account \"%s\". It looks like the account was deleted from the server.</string>
    <string name="server_version">Server version</string>
    <string name="server_version_error">Error getting server version</string>
    <string name="server_version_error_low_version">At least server version {MIN} is required, but the selected server has version {CURRENT}. Continue at your own risk.</string>
    <string name="Settings_FMDServer_AddAccount">FMD Server: Login</string>
    <string name="Settings_FMDServer_Info">With FMD Server you can send commands over the internet, from the server to the app. You can also view the device location on a map or view pictures taken by the device. For self-hosting instructions, see the website.</string>
    <string name="Settings_FMDServer_open_website">Open FMD Server website</string>
    <string name="Settings_FMDServer_use_default_server">Use the public server</string>
    <string name="Settings_FMDServer_Server_Url">Server URL</string>
    <string name="Settings_FMDServer_Login">Login</string>
    <string name="Settings_FMDServer_Register">Register</string>
    <string name="Settings_FMDServer_Alert_PrivacyPolicy_Title">Privacy policy</string>
    <string name="server_username">Username</string>
    <string name="server_fmd_id_hint">The username identifies your account on FMD Server. The server administrator can see the username.</string>
    <string name="password">Password</string>
    <string name="server_password_hint">Choose a password that cannot be guessed, but that you can recover when you lose your device. The password grants access to remotely running commands on your device. The server administrator cannot access or reset your password.</string>
    <string name="Settings_FMDServer_Error_id_or_pw_empty">The username and password must not be empty.</string>
    <string name="registration_token">Registration token</string>
    <string name="registration_token_hint">Private instances may require a secret token. Leave this empty if the instance is public.</string>
    <string name="server_registration_token_error">Network request failed with HTTP 401. This can happen if the server requires a registration token and the token you provided was wrong.</string>
    <string name="access_tab_phone_number">Phone numbers</string>
    <string name="fmd_permission_allowed_commands_title">Choose allowed commands</string>
    <string name="fmd_permission_allowed_commands_description_server">Decide which commands this server account is allowed to execute (and which not).</string>
    <string name="sp_activity_title" translatable="false">SecurePouch Devices</string>
    <string name="sp_no_devices">No devices paired yet.</string>
    <string name="sp_pair_button">Pair New Device</string>
    <string name="sp_pair_hint_uid">Device ID (e.g. securepouch-001)</string>
    <string name="sp_pair_hint_password">Password</string>
    <string name="sp_pair_hint_token">Registration Token</string>
    <string name="sp_scan_title">Scan for SecurePouch</string>
    <string name="sp_scan_hint">Make sure your pouch is nearby and powered on. Tap a device to pair it.</string>
    <string name="sp_scan_button">Scan</string>
    <string name="sp_scan_no_devices">No SecurePouch devices found.\nTap Scan to try again.</string>
</resources>